Bug 204784 - form.elements[] not order preserving when using javascript DOM interface. r/sr=bzbarsky@mit.edu